cleaning deprecated functionalities

--- a/public/css/events.css
+++ b/public/css/events.css
@@ -388,6 +388,7 @@ h3{
 	letter-spacing: 1px;
 	font-size: .9em;
 	line-height: 1.45em;
+	font-family: 'Karla';
 }
  
 #createEventWrap .tags-wrap, #createEventWrap .event-friends-wrap{
