--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -3,6 +3,13 @@
     padding-top: 10%;
 }
 
+.auto-login-msg {
+    color: gainsboro;
+    font-size: 14px;
+    font-family: 'Karla';
+    letter-spacing: 1px;
+}
+
 .etiquette{
   background: rgba(255, 255, 255, 0.81);
   border-bottom: 1px 
