--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -57,3 +57,5 @@
 .icon-star-1:before { content: '\e837'; } /* '' */
 .icon-star-empty:before { content: '\e838'; } /* '' */
 .icon-lock-open:before { content: '\e839'; } /* '' */
+.icon-male-1:before { content: '\e83a'; } /* '' */
+.icon-female-1:before { content: '\e83b'; } /* '' */
