--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?15833801');
-  src: url('../font/fontello.eot?15833801#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?15833801') format('woff'),
-       url('../font/fontello.ttf?15833801') format('truetype'),
-       url('../font/fontello.svg?15833801#fontello') format('svg');
+  src: url('../font/fontello.eot?69889793');
+  src: url('../font/fontello.eot?69889793#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?69889793') format('woff'),
+       url('../font/fontello.ttf?69889793') format('truetype'),
+       url('../font/fontello.svg?69889793#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?15833801#fontello') format('svg');
+    src: url('../font/fontello.svg?69889793#fontello') format('svg');
   }
 }
 */
@@ -112,3 +112,5 @@
 .icon-star-1:before { content: '\e837'; } /* '' */
 .icon-star-empty:before { content: '\e838'; } /* '' */
 .icon-lock-open:before { content: '\e839'; } /* '' */
+.icon-male-1:before { content: '\e83a'; } /* '' */
+.icon-female-1:before { content: '\e83b'; } /* '' */
