--- a/views/index.html
+++ b/views/index.html
@@ -265,99 +265,76 @@
 
     </section>
 
-
+    
     <section id="eventsWrap" class="none centered">
-      <div class="eventsHeader">
-        <h2>Tous les meefore</h2>
-        <div class="actionsWrap actionsStyle">
-          <span id="activateFilters" class="action">Appliquer les filtres</span>
-          <span id="displayFilters" class="action"><span>Afficher</span> tous les filtres</span>
-          <span id="resetFilters" class="action">Enlever tous les filtres</span>
-          <span id="refreshEventsFilters" class="action">Rafraîchir</span>
-        </div>
-        <div class="filtersWrap none">
+      
+      <div class="row row-events">
+        <h2> Tous les before </h2>
+        <h5 class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
+      </div>
 
-          <div class="filters-tags-row tags-wrap"> <span>Tags</span>
-             <!-- Dynamically loaded -->
-          </div>
-          <div class="filters-locs-row locs-wrap">
-             <!-- Dynamically loaded -->
-          </div>
+      <div class="row row-events row-create">
+        <div class="create-event-wrap">
+        <button class="theme-btn btn-create-event">Créer un before</button>
         </div>
       </div>
-      <div id="frozenTimezone" class="none">
-        <h2>Fais un break</h2>
-        <center>
-          <h3>Les meefores sont fermés le matin, reprise à 14H. Time to sleep.</h3>
-        </center>
-      </div>
-      <section id="eventsListWrap">
-         <!-- Dynamically loaded -->
-      </section>
-      <div id="no">
 
-      </div>
-      <div id="friendListWrap" class="none">
-        <div id="myFriends">
-           <!-- Dynamically loaded -->
-        </div>
-      </div>
     </section>
-
-
-    <section id="createEventWrap" class="none centered">
-      <h2>Proposer un before</h2>
-      <div id="createEventInputsWrap">
-        <div class="input-row-wrap">
-          <label for="eventName">Before</label>
-          <input id="eventName" placeholder="quelle soirée ?" type="text" class="input-field_create">
-        </div>
-        <div class="input-row-wrap">
-          <label for="eventLocation">Arrondissement</label>
-          <input id="eventLocation" class="input-field_create" placeholder="1" max="20" min="1" type="number">
-        </div>
-        <div class="input-row-wrap">
-          <label for="eventHour">Heure de début</label>
-          <input id="eventHour" class="input-field_create" type="text" placeholder="20" maxlength="2"><b>h</b>
-          <input id="eventMinut" class="input-field_create" type="text" placeholder="00" maxlength="2">
-        </div>
-        <div class="input-row-wrap hint--right" data-hint="Restez raisonnable...">
-          <label for="eventMaxGuest">Nombre d'invités </label>
-          <input id="eventMaxGuest" class="input-field_create" value="3" max="100" min="2" type="number">
-        </div>
-        <div class="input-row-wrap">
-          <label for="event-friends-wrap">Ils y seront </label>
-          <div class="event-friends-wrap"></div>
-        </div>
-        <div class="input-row-wrap">
-          <label for="tags">Tags</label>
-          <div class="tags-wrap"></div>
-        </div>
-        <div class="input-row-wrap">
-          <label for="eventDescription">About</label>
-          <textarea id="eventDescription" placeholder="Winter is coming..."></textarea>
-        </div>
-        <button id="createEventBtn" class="right themeBtn themeBtnMain">Create event</button>
+  
+    <div id="createEvent" class="none">
+      
+      <div class="row-create">
+        <h2>Faites nous plaisir</h2>
       </div>
-    </section>
-
-
-    <section id="manageEventsWrap" class="none centered">
-      <h2>Ils veulent venir à ton meefore</h2>
-      <div class="actionsWrap actionsStyle">
-        <span id="cancelEvent" class="action">Annuler</span>
-        <span id="suspendEvent" class="action">Suspendre</span>
+      <div class="row-title-sub">
+        Tous les befores rapportent 500pts lorsqu'ils donnent lieu à une vraie rencontre
       </div>
-      <div id="askersListWrap">
-        <div id="askersThumbs"></div>
-        <div class="askersMainWrap">
-          <i class="icon icon-left-open-big next-left"></i>
-          <i class="icon icon-right-open-big next-right"></i>
-          <div id="askersMain">
-          </div>
+
+      <div class="row-input row-input-lg etiquette row-create-party-location">
+        <label class="label label-lg" for="cr-party-location">Lieu de la soirée</label>
+        <input id="cr-party-location" type="text" placeholder="Endroit où vous comptez sortir après le before">
+      </div>
+
+      <div class="row-input row-input-lg etiquette row-create-hosts">
+        <label class="label label-lg" for="cr-hosts">Organisateurs</label>
+        <input id="cr-hosts" type="text" placeholder="Sélectionner les organisateurs parmis vos amis">
+      </div>
+
+      <div class="row-input row-input-md etiquette row-create-date">
+        <label class="label label-md" for="cr-date">Date du before</label>
+        <input id="cr-date" type="text" placeholder="">
+      </div>
+
+      <div class="row-input row-input-md etiquette row-create-before-location">
+        <label class="label label-md" for="cr-before-location">Lieu du before</label>
+        <input id="cr-before-location" type="text" placeholder="">
+      </div>
+
+      <div class="row-input row-input-lg etiquette row-create-ambiance">
+        <label class="label label-lg" for="cr-ambiance">Ambiance</label>
+        <input id="cr-ambiance" type="text" placeholder="Nom de la rue">
+      </div>
+
+      <div class="row-input row-input-lg etiquette row-create-age">
+        <label class="label label-lg" for="cr-age">Âge souhaité</label>
+        <input id="cr-age" type="text" placeholder="Nom de la rue">
+      </div>
+
+      <div class="row-input row-input-lg etiquette row-create-mixity">
+        <label class="label label-lg" for="cr-mixity">Type d'invités</label>
+        <div class="row-select-wrap mixity-wrap">
+              <div class="row-select mixity" data-selectid="boys"><i class="icon icon-boys icon-male-1"></i>Plutôt des hommes</div>
+              <div class="row-select mixity" data-selectid="mixed"><i class="icon icon-mix icon-users"></i>Les deux</div>
+              <div class="row-select mixity selected" data-selectid="girls"><i class="icon icon-girls icon-female-1"></i>Plutôt des femmes</div>
         </div>
       </div>
-    </section>
+
+      <div class="row-buttons visible">
+          <button class="theme-btn btn-cancel right">Annuler</button>
+          <button class="theme-btn btn-validate right">Créer!</button>
+        </div>
+
+    </div>
 
 
     <section id="searchUsersWrap" class="none centered">
@@ -457,24 +434,6 @@
 
     </section>
 
-
-    <section id="contactWrap" class="none centered">
-      <h2>On veut tout savoir</h2>
-      <form>
-        <div>
-          <label for="contactName">Nom</label>
-          <input id="contactName" type="text" placeholder="Jack Bamboo">
-        </div>
-        <div>
-          <label for="contactMail">Email</label>
-          <input id="contactMail" type="text" placeholder="jack@bamboomail.com">
-        </div>
-        <label for="contactBody" class="align-top">Ton message</label>
-        <textarea id="contactBody" placeholder="Hi there, ..."></textarea>
-      </form>
-      <button id="sendContactForm" class="right themeBtn themeBtnMain">Envoyer</button>
-    </section>
-
   </div>
 
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>
@@ -490,6 +449,8 @@
   <script src="js/lj-render.js"></script>
   <script src="js/lj-domEvents.js"></script>
   <script src="js/lj-admin.js"></script>
+  <script src="js/lj-typeaheads.js"></script>
+  <script src="js/lj-helpers.js"></script>
   <script src="js/lj.js"></script>
 
 
