--- a/public/css/create.css
+++ b/public/css/create.css
@@ -5,9 +5,13 @@
 #createEvent label {
 	text-align: left;
 	padding-right: 10px;
+	vertical-align: top;
+	line-height: 21px;
 }
 #createEvent input {
 	color: #555;
+	line-height: 21px;
+	vertical-align: top;
 }
 
 
@@ -18,11 +22,60 @@
 .mixity.selected[data-selectid="girls"]{
 	background: #FFEDFC;
 	color: #962596;
+	border: 1px solid #FCCEFC;
 }
 .mixity.selected[data-selectid="boys"]{
 	background: #DDE3FF;
 	color: #2E2E81;
+	border: 1px solid #BFD2E2;
 }
 .mixity.selected[data-selectid="mixed"]{
 	/* background:#FFDDE3; */
 }
+
+
+.host {
+
+display: inline-block;
+
+background: #FBFBFB;
+
+padding: 0px 6px 0 0px;
+
+vertical-align: top;
+
+position: relative;
+
+height: 32px;
+
+top: -4px;
+
+border: 1px solid;
+
+margin-right: 7px;
+}
+.host-img {
+	
+position: absolute;
+	
+top: 3px;
+	
+left: 4px; 
+	
+z-index: 1;
+}
+.host-loader {
+	position: absolute;
+	top: 9px;
+	left: 12px;
+	width: 13px;
+}
+.host-name {
+	display: inline-block;
+	line-height: 30px;
+	vertical-align: top;
+	font-family: 'Karla';
+	font-size: 13px;
+	color: #555;
+	margin-left: 35px;
+} 
