--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
+  <link rel="stylesheet" href="/css/pikadate.css">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -380,6 +381,7 @@
 
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>
   <script src="dist/lib.js"></script>
+  <script src="js/lib/pikaday.js"></script>
 
   <!-- custom scripts -->
   <script src="js/src/lj-params.js"></script>
